v2 browser testing and build

--- a/tests/index.html
+++ b/tests/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="shortcut icon" type="image/png" href="jasmine-3.5.0/jasmine_favicon.png">
-    <link rel="stylesheet" type="text/css" href="jasmine-3.5.0/jasmine.css">
+    <link rel="shortcut icon" type="image/png" href="../node_modules/jasmine-core/images/jasmine_favicon.png">
+    <link rel="stylesheet" type="text/css" href="../node_modules/jasmine-core/lib/jasmine-core/jasmine.css">
 
-    <script type="text/javascript" src="jasmine-3.5.0/jasmine.js"></script>
-    <script type="text/javascript" src="jasmine-3.5.0/jasmine-html.js"></script>
-    <script type="text/javascript" src="jasmine-3.5.0/boot.js"></script>
+    <script type="text/javascript" src="../node_modules/jasmine-core/lib/jasmine-core/jasmine.js"></script>
+    <script type="text/javascript" src="../node_modules/jasmine-core/lib/jasmine-core/jasmine-html.js"></script>
+    <script type="text/javascript" src="../node_modules/jasmine-core/lib/jasmine-core/boot0.js"></script>
+    <script type="text/javascript" src="../node_modules/jasmine-core/lib/jasmine-core/boot1.js"></script>
     <title>Jasmine tests for Pincode Validator</title>
 
     <script src="../pincode-regex.js"></script>
     <script src="browser-spec.js"></script>
 </head>
 <body>
-
 </body>
 </html>
